<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!--Poster Film memiliki rasio 2:3-->
        <ImageView
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:id="@+id/posterMovie"
            android:src="@drawable/thebatman"
            android:contentDescription="@string/cover"/>

        <TextView
            android:id="@+id/titleMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/posterMovie"
            android:layout_toEndOf="@id/posterMovie"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toRightOf="@+id/posterMovie"
            android:layout_toEndOf="@id/posterMovie"
            android:layout_below="@id/titleMovie">
            <TextView
                android:id="@+id/genredescMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="15sp"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/genreMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="15sp"
                android:layout_marginStart="10dp" />
        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>